fixed video display on mobile

--- a/style.css
+++ b/style.css
@@ -812,3 +812,16 @@ footer h1 {
   gap: 25px;
   margin-bottom: 40px;
 }
+
+
+.recap-video {
+  width: 416px;
+  height: 240px;
+}
+
+@media (max-width: 767px) {
+  .recap-video {
+    width: 335px;
+    height: 193px; /* Maintaining the same aspect ratio */
+  }
+}
